[workspace]
resolver = "2"
members = [ "keeper-log","keeper-todo", "keeper-util"]
license = ["GPL-3.0-or-later"]

[workspace.dependencies]
anyhow = "1.0.79"
chrono = { version = "0.4.31", features = ["serde"] }
ron = "0.8.1"
serde = { version = "1.0.195", features = ["derive"] }
image = "0.24.7"
imageproc = "0.23.0"
rusttype = "0.9.3"
