[package]
name = "keeper-todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
chrono.workspace = true
ron.workspace = true
serde.workspace = true
image.workspace = true
imageproc.workspace = true
rusttype.workspace = true
keeper-util = { path = "../keeper-util/" }
